force-app/main/default/objects/Expense__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>The category of the expense.</description>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Seeds/Saplings</fullName>
            </value>
            <value>
                <fullName>Fertilizer</fullName>
            </value>
            <value>
                <fullName>Labor - Planting</fullName>
            </value>
            <value>
                <fullName>Irrigation - Equipment</fullName>
            </value>
            <value>
                <fullName>Water</fullName>
            </value>
            <value>
                <fullName>Miscellaneous</fullName>
                <default>true</default>
                <label>Miscellaneous</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>