force-app/main/default/objects/Expense__c/fields/Crop_Cycle__c.field-meta.xml
<CustomField>
    <fullName>Crop_Cycle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The crop cycle this expense is associated with.</description>
    <label>Crop Cycle</label>
    <referenceTo>Crop_Cycle__c</referenceTo>
    <relationshipLabel>Expenses</relationshipLabel>
    <relationshipName>Expenses</relationshipName>
    <type>Lookup</type>
</CustomField>