force-app/main/default/objects/Expense__c/fields/Quantity_Used__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Used__c</fullName>
    <description>The quantity of the inventory item used for this expense.</description>
    <label>Quantity Used</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>