force-app/main/default/objects/Expense__c/fields/Vendor_Supplier__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Supplier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendor/Supplier</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Expenses</relationshipLabel>
    <relationshipName>VendorExpenses</relationshipName>
    <type>Lookup</type>
</CustomField>