force-app/main/default/objects/Expense__c/recordTypes/Equipment_Expense.recordType-meta.xml
<RecordType>
    <fullName>Equipment_Expense</fullName>
    <active>true</active>
    <description>Equipment purchase and maintenance expenses.</description>
    <label>Equipment Expense</label>
</RecordType>