force-app/main/default/objects/Expense__c/recordTypes/Input_Expense.recordType-meta.xml
<RecordType>
    <fullName>Input_Expense</fullName>
    <active>true</active>
    <description>Input expenses for seeds, fertilizer, and related items.</description>
    <label>Input Expense</label>
</RecordType>