force-app/main/default/objects/Expense__c/recordTypes/Labor_Expense.recordType-meta.xml
<RecordType>
    <fullName>Labor_Expense</fullName>
    <active>true</active>
    <description>Labor-related farm expense entries.</description>
    <label>Labor Expense</label>
</RecordType>